fixing alignment issues

--- a/css/scss/apps/marketing/main.scss
+++ b/css/scss/apps/marketing/main.scss
@@ -27,7 +27,7 @@ html, body {
 }
 
 .site-canvas {
-  margin-top: 70px;
+  margin-top: 63px;
 }
 
 #home-page1 {
