--- a/css/scss/modules/marketing/_full_section.scss
+++ b/css/scss/modules/marketing/_full_section.scss
@@ -3,7 +3,7 @@
   padding: 0;
   margin: 0;
   width: 100%;
-  height: 92vh;
+  height: 93vh;
 
   .full-section-controls {
     width: 100%;
