--- a/css/scss/modules/marketing/_navigation.scss
+++ b/css/scss/modules/marketing/_navigation.scss
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   width: 100%;
+  height: 62px;
   top: 0;
   position: fixed;
   z-index: 100;
@@ -16,8 +17,6 @@
   }
 
   .login {
-    height: 100%;
-    margin-top: 10px;
     margin-right: 50px;
 
     .btn {
@@ -51,6 +50,8 @@
         height: 100%;
 
         a {
+          margin: 0;
+          padding: 0;
           display: block;
           height: 100%;
           color: #5d5d5d;
